WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286575
Imperative invokers for popover doesn't fix focus order
https://bugs.webkit.org/show_bug.cgi?id=286575
Summary
Imperative invokers for popover doesn't fix focus order
Luke Warlow
Reported
2025-01-27 09:46:12 PST
Imperative invoker relationships were recently added to the popover API (see
https://bugs.webkit.org/show_bug.cgi?id=282337
). However, it turns out there's missing test coverage for one of the required features, doing a focus fixup using the provided invoker. As a result this is missing from the WebKit impl (and Chromium's). This bug tracks addressing that.
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Nguyen (:ntim)
Comment 1
2025-01-27 10:13:43 PST
This function just needs to be augmented to support the new way of setting the invoker:
https://searchfox.org/wubkat/rev/47b66cb0dc7c2146fa7576555c720080708667f3/Source/WebCore/page/FocusController.cpp#84-93
Lmk if you need help with that but I'm sure you can figure it out!
Luke Warlow
Comment 2
2025-01-27 10:19:09 PST
Thanks for the pointer! Yeah I actually already have a patch just about to push it up.
Luke Warlow
Comment 3
2025-01-27 10:42:00 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39598
Radar WebKit Bug Importer
Comment 4
2025-02-03 09:49:17 PST
<
rdar://problem/144094678
>
EWS
Comment 5
2025-03-06 11:43:39 PST
Committed
291719@main
(b46f59f1c06a): <
https://commits.webkit.org/291719@main
> Reviewed commits have been landed. Closing PR #39598 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug