Imperative invokers for popover don't fix focus order https://bugs.webkit.org/show_bug.cgi?id=286575

Reviewed by Tim Nguyen.

The FocusController currently still relies on the popoverTargetElement of buttons, to look for popovers
to move to the new focus order.

This patch stores the invoked popover on the provided invoking element's rare data,
and then updates FocusController to use this instead.

This way both declarative and imperative popover relationships correctly fix focus order.

* LayoutTests/imported/w3c/web-platform-tests/html/semantics/popovers/popover-focus-2-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/popovers/popover-focus-2.html:
* Source/WebCore/dom/Element.cpp:
(WebCore::Element::invokedPopover const):
(WebCore::Element::setInvokedPopover):
* Source/WebCore/dom/Element.h:
(WebCore::Element::handleCommandInternal):
* Source/WebCore/dom/ElementRareData.cpp:
* Source/WebCore/dom/ElementRareData.h:
(WebCore::ElementRareData::invokedPopover const):
(WebCore::ElementRareData::setInvokedPopover):
(WebCore::ElementRareData::useTypes const):
* Source/WebCore/dom/NodeRareData.h:
* Source/WebCore/html/HTMLDialogElement.cpp:
(WebCore::HTMLDialogElement::handleCommandInternal):
* Source/WebCore/html/HTMLDialogElement.h:
* Source/WebCore/html/HTMLElement.cpp:
(WebCore::HTMLElement::showPopoverInternal):
(WebCore::HTMLElement::setInvoker):
(WebCore::HTMLElement::hidePopoverInternal):
(WebCore::HTMLElement::handleCommandInternal):
* Source/WebCore/html/HTMLElement.h:
* Source/WebCore/html/HTMLFormControlElement.cpp:
(WebCore::HTMLFormControlElement::handlePopoverTargetAction):
(WebCore::HTMLFormControlElement::handlePopoverTargetAction const): Deleted.
* Source/WebCore/html/HTMLFormControlElement.h:
* Source/WebCore/page/FocusController.cpp:
(WebCore::openPopoverForInvoker):

Canonical link: https://commits.webkit.org/291719@main